deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: megasecond
spec:
  replicas: 1
  selector:
    matchLabels:
      app: megasecond
  template:
    metadata:
      labels:
        app: megasecond
      annotations:
        prometheus.io/scrape: "false"
    spec:
      containers:
      
        - name: client-vite
          image: bang5:5000/megasecond_image
          command: ["client/run_client_vite.sh"]
          ports: 
          - { containerPort: 10001 }
          - { containerPort: 9001 }

        - name: server
          image: bang5:5000/megasecond_image
          command: ["server/run_server.sh"]
          ports: 
            - { containerPort: 10002 }
            - { containerPort: 9002 }
---
apiVersion: v1
kind: Service
metadata:
  name: megasecond
spec:
  ports:
    - { port: 10001, targetPort: 10001, name: client }
    - { port: 10002, targetPort: 10002, name: server }
    - { port: 9001, targetPort: 9001, name: clientvitelog }
    - { port: 9002, targetPort: 9002, name: serverlog }
  selector:
    app: megasecond
